Bug 170140 - spell checking: missing support of words with non-ASCII apostrophe
Summary: spell checking: missing support of words with non-ASCII apostrophe
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks: Spell-Checking
  Show dependency treegraph
 
Reported: 2025-12-27 12:26 UTC by László Németh
Modified: 2026-01-02 14:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
non-ASCII_apostrophe.odt (11.05 KB, application/vnd.oasis.opendocument.text)
2025-12-27 12:39 UTC, László Németh
Details
Screenshot with English-US as language. (36.79 KB, image/png)
2025-12-27 14:14 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2025-12-27 12:26:27 UTC
Description:
Words with non-ASCII apostrophe are rejected, despite that they are parts of the dictionary words, and no problem with the break iterator rules.

Steps to Reproduce:
Open the attached Hungarian test file.

Actual Results:
The words (d’Arc, d’Alembert, McDonald’s) are rejected.

Expected Results:
The words are accepted.


Reproducible: Always


User Profile Reset: No

Additional Info:
See also Bug 83191 (which is the problem of the break iterator).
Comment 1 László Németh 2025-12-27 12:39:13 UTC
Created attachment 204816 [details]
non-ASCII_apostrophe.odt

Hungarian test document (it needs Hungarian spelling dictionary)
Comment 2 m_a_riosv 2025-12-27 14:14:58 UTC
Created attachment 204819 [details]
Screenshot with English-US as language.

Whit English-US "McDonald’s" is accepted.
Comment 3 Commit Notification 2025-12-28 05:17:26 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c1702ddc2e4fc3cbcdb2dbdc848d8a95e8ec9a52

tdf#170140 lingucomponent: check words with non-ASCII apostrophe

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2025-12-28 05:23:09 UTC
(In reply to m_a_riosv from comment #2)
> Whit English-US "McDonald’s" is accepted.

Only because the en-US dictionary still contains the ASCII apostrophe, accepting the typographic error "McDonald's", too.
Comment 5 Commit Notification 2025-12-29 16:25:43 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/5fad461dd7d85e0fe41de621e49933b251a629ce

tdf#170140 lingucomponent: check words with non-ASCII apostrophe

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-12-30 21:36:58 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/3fdf13e7f9e0e053d11bfe477407ec9331160ef2

tdf#170140 lingucomponent: check words with non-ASCII apostrophe

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 László Németh 2026-01-02 14:12:56 UTC
Note: d’Arc is accepted now, but not D’Arc, yet, because of missing capitalization in Hunspell.